# DDD-Licensing-Service

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: alembic.ini  config.py  main.py  pyproject.toml  start.sh
backend/core/: bootstrap.py  constants.py  messagebus_handler.py
backend/core/domain/: aggregate.py  entity.py  value_object.py
backend/core/infra/: commands.py  events.py  messages.py  repositories.py  units_of_work.py
backend/core/infra/database/: repositories.py  units_of_work.py
backend/core/infra/outside_broker/: connection.py
backend/infrastructure/api/: main.py
backend/infrastructure/email_client/: pyproject.toml
backend/infrastructure/email_client/email_sender/: client.py
backend/infrastructure/email_client/protobuf_types/: StatisticRowEvents.proto  StatisticRowEvents_pb2.py  UserEvents.proto
backend/infrastructure/telegram_client/: pyproject.toml
backend/infrastructure/telegram_client/protobuf_types/: AttractionEvents_pb2.py  LicenseEvents.proto  UserEvents_pb2.py  test1_pb2.py
backend/infrastructure/telegram_client/scripts/protobuf/: generate_all_protobuf_types.sh
backend/infrastructure/telegram_client/telegram/: telegram_bot.py
backend/licensing_service/api/: config.py  deps.py
backend/licensing_service/api/v1/: routers.py
backend/licensing_service/api/v1/endpoints/: licenses.py  subdivisions.py  tenants.py  users.py
backend/licensing_service/api/v1/schemas/: license.py  statictic_row.py  subdivision.py  tenant.py  user.py
backend/licensing_service/api/v1/services/: license.py  subdivision.py  tenant.py  utils.py
backend/licensing_service/app/: __init__.py
backend/licensing_service/app/commands/: license_commands.py  subdivision_commands.py  tenant_commands.py  user_commands.py
backend/licensing_service/app/queries/: license_queries.py
backend/licensing_service/app/services/: license_services.py  subdivision_services.py  tenant_services.py
backend/licensing_service/domain/: constants.py
backend/licensing_service/domain/aggregates/: subdivision.py  tenant.py
backend/licensing_service/domain/aggregates/entities/: license.py  stat_row.py  user.py
backend/licensing_service/domain/exceptions/: statistic_row.py
backend/licensing_service/domain/services/: domain_event_bus.py
backend/licensing_service/domain/services/commands/: license_commands.py  subdivision_commands.py  tenant_commands.py  user_commands.py
backend/licensing_service/domain/services/events/: license_events.py  statistic_row_events.py  tenant_events.py
backend/licensing_service/domain/services/handlers/: subdivision_handlers.py  tenant_handlers.py  user_handlers.py
backend/licensing_service/domain/services/repos/: license_repo.py  subdivision_repo.py  tenant_repo.py  user_repo.py
backend/licensing_service/domain/services/uow/: subdivision_uow.py
backend/licensing_service/domain/value_objects/: license_type.py
backend/licensing_service/infra/adapters/: kafka_adapter.py  user_domain_client.py
backend/licensing_service/infra/handlers/commands/: license.py  tenant.py
backend/licensing_service/infra/handlers/events/: license_event_handlers.py  outside_broker_event_handlers.py  tenant_event_handlers.py  user_event_handlers.py
backend/licensing_service/infra/protobuf_types/: LicenseEvents_pb2.py  TenantEvents_pb2.py
backend/licensing_service/infra/repos/sqlalchemy/: subdivision_repo.py  tenant_repo.py
backend/licensing_service/infra/uow/sqlalchemy/: license_uow.py  user_uow.py
backend/licensing_service/tests/unit/domain/aggregates/: test_subdivision.py
backend/scripts/: downgrade  makemigrations  start_tests.sh
backend/scripts/kafka_scripts/: create_topics.sh
scripts/: build_images.sh  (+2 more)
src/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
src/backend/core/: exceptions.py  messagebus_handler.py
src/backend/core/domain/: entity.py
src/backend/core/infra/: __init__.py  eventbus.py  handlers.py
src/backend/core/infra/database/: units_of_work.py
src/backend/core/infra/outside_broker/: config.py
src/backend/domains/licensing_service/api/: deps.py
src/backend/domains/licensing_service/api/v1/: routers.py
src/backend/domains/licensing_service/app/: README.md
src/backend/domains/licensing_service/domain/: README.md  constants.py
src/backend/domains/licensing_service/infra/: README.md
src/backend/domains/licensing_service/tests/: __init__.py  conftest.py
src/backend/infrastructure/rest_api/: config.py  main.py
src/backend/licensing_service/app/queries/: tenant_queries.py
src/backend/licensing_service/app/services/: user_services.py
src/backend/licensing_service/domain/aggregates/: tenant.py
src/backend/licensing_service/domain/value_objects/: email.py  license_status.py  work_status.py
src/backend/licensing_service/infra/adapters/: orm.py
src/backend/licensing_service/infra/handlers/: __init__.py
src/backend/licensing_service/infra/protobuf_types/: UserEvents.proto  UserEvents_pb2.py
src/backend/licensing_service/tests/api/: conftest.py
src/backend/scripts/: migrate
src/backend/scripts/protobuf/: generate_all_protobuf_types.sh
src/email_channel/: Dockerfile  README.md  pyproject.toml  settings.py  start.sh
src/email_channel/kafka_consumer/: consumer.py
src/email_channel/scripts/protobuf/: generate_all_protobuf_types.sh
src/email_client/: main.py  pyproject.toml  template_renderer.py
src/email_client/email_sender/: client.py
src/email_client/protobuf_types/: TypeMessage_pb2.py
src/email_client/scripts/protobuf/: generate_all_protobuf_types.sh
src/email_client/templates/: default_mail.html
src/telegram_channel/: Dockerfile  README.md  main.py  pyproject.toml
src/telegram_channel/kafka_consumer/: consumer.py
src/telegram_channel/scripts/protobuf/: generate_all_protobuf_types.sh
src/telegram_client/: Dockerfile  pyproject.toml  settings.py
src/telegram_client/protobuf_types/: LicenseEvents.proto  StatisticRowEvents.proto  TenantEvents.proto
src/telegram_client/scripts/protobuf/: generate_all_protobuf_types.sh
(+117 files in other folders)
