[project]
name = 'DDD-License-Service'

[tool.poetry]
name = "backend"
version = "0.0.1"
description = " ddd architecture of backend the Partner domain"
authors = ["Yaroslav Pisarev <yaricp@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.4"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.6.0"
aiosqlite = "^0.20.0"
aiopg = "^1.4.0"
asyncpg = "^0.30.0"
kafka-python = "^2.0.2"
six = "^1.16.0"
protobuf = "^5.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"
asgi-lifespan = "^2.1.0"
pytest-postgresql = "^7.0.2"
flake8 = "^7.3.0"
ruff = "^0.13.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
ruff = "^0.13.0"
isort = "^6.0.1"
black = "^25.1.0"

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['alembic/']

# Avoiding incorrect 'override' error:
[[tool.mypy.overrides]]
module = [
    "src.users.adapters.repositories",
    "src.users.service_layer.handlers.*",
    "tests.users.fake_objects",
]
disable_error_code = ["override"]

# Avoiding incorrect 'misc' error during dependency injection to event-handlers and command-handlers:
[[tool.mypy.overrides]]
module = "src.backend.core.bootstrap"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ['tests',]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
# Игнорируем правила, конфликтующие с Black
extend-ignore = [
    "E203",  # Whitespace before ':' (Black форматирует по-своему)
    "W503",  # Line break before binary operator (Black делает наоборот)
]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "alembic",
    "tests/*",  # если не хочешь ругани на тестовые ассерт-стили
]